--- a/ijvm/css/index.css
+++ b/ijvm/css/index.css
@@ -6,22 +6,10 @@ html, body {
   width: 100%;
   height: 100%;
   background-image: url('../img/bg.jpg');
-  background-position: right top;
-  background-attachment: fixed;
-  background-size: 100% 100%;
-  animation: rainbow 100s ease infinite;
-}
-
-@keyframes rainbow {
-    0% {
-        background-position: 0% 82%
-    }
-    50% {
-        background-position: 0% 19%
-    }
-    100% {
-        background-position: 0% 82%
-    }
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 * { box-sizing: border-box; font-family: "Source Sans Pro";}
