--- a/ijvm/css/index.css
+++ b/ijvm/css/index.css
@@ -5,9 +5,10 @@ html, body {
   padding: 0;
   width: 100%;
   height: 100%;
+  min-height: 100%;
   background: url('../img/bg.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
-  -moz-background-size: cover;
+  -moz-background-size: c over;
   -o-background-size: cover;
   background-size: cover;
 }
