--- a/ijvm/css/index.css
+++ b/ijvm/css/index.css
@@ -6,11 +6,6 @@ html, body {
   width: 100%;
   height: 100%;
   min-height: 100%;
-  background: url('../img/bg.jpg') no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: c over;
-  -o-background-size: cover;
-  background-size: cover;
 }
 
 * { box-sizing: border-box; font-family: "Source Sans Pro";}
@@ -49,21 +44,31 @@ hr {
   color: white;
 }
 
-button {
+.button-group {
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.button-group > * {
   border:none;
   display:block;
-  margin: 3em 1em 1em 1em;
+  flex:1;
+  /* float: left; */
+  /* width:33%; */
+  font-weight: 300;
+  margin: 1em 0.3em 1em 0.3em;
   padding: 10px 20px;
 }
 
-.dark-theme button:hover, button {
-  background:#151313;;
-  color: #ccc;
+.dark-theme .button-group > :hover, .dark-theme .button-group > :hover:visited, .button-group > *, .button-group > :visited {
+  background: #ccc;
+  color:#151313;
 }
 
-button:hover, .dark-theme button {
-  background: #ccc;
-  color:#151313;;
+.button-group > :hover, .dark-theme .button-group > *, .button-group > :hover:visited, .dark-theme .button-group > :visited {
+  background:#151313;;
+  color: #ccc;
 }
 
 .binary-explorer {
@@ -77,7 +82,7 @@ button:hover, .dark-theme button {
   display:inline-block;
 }
 
-.code::after {
+.code::after, .button-group::after {
   content: " ";
   display: block;
   height: 0;
@@ -152,7 +157,15 @@ pre {
 
 
 
-@media (orientation:landscape) and (min-width:900px) {
+@media (min-width:1000px) {
+  body {
+    background: url('../img/bg.jpg') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: c over;
+    -o-background-size: cover;
+    background-size: cover;
+  }
+
   /* get 2 blocks side by side */
   .binary-explorer, .explanation-block {
     min-height: 100vh;
@@ -170,7 +183,7 @@ pre {
   }
 }
 
-@media (orientation:portrait), (max-width:900px) {
+@media (orientation:portrait), (max-width:1000px) {
 
   /* get 2 blocks side by side */
   .binary-explorer, .explanation-block {
@@ -178,14 +191,15 @@ pre {
     float: left;
   }
 
-  button { 
+  /* .button-group > * { 
     margin: 1em 0 1em 0;
     padding: 0.5em 1em;
-  }
+  } */
 
   pre { overflow: hidden;}
 
-  .container { margin: 1em; padding: 0.5em 1em; }
+  .container { margin: 0; padding: 1em 1.5em 1em 1em;}
+  .explanation-block .container {padding-bottom:7em;}
   .code { padding: 0px;}
-  .byte { padding: 7px; margin: 2px;}
+  .byte { padding: 10px; margin: 2px;}
 }
